--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,13 +75,13 @@ jobs:
         uses: stefanprodan/helm-gh-pages@master
         with:
           token: ${{ secrets.CHARTS_TOKEN }}
-          charts_dir: .
-          charts_url: https://traefik.github.io/charts
-          owner: traefik
-          repository: charts
-          branch: master
-          target_dir: traefik
-          index_dir: .
-          commit_username: traefiker
-          commit_email: 30906710+traefiker@users.noreply.github.com
+          # charts_dir: .
+          # charts_url: https://traefik.github.io/charts
+          # owner: traefik
+          # repository: charts
+          # branch: master
+          # target_dir: traefik
+          # index_dir: .
+          # commit_username: traefiker
+          # commit_email: 30906710+traefiker@users.noreply.github.com
         if: steps.tag_exists.outputs.TAG_EXISTS == 'false'
